# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pythonanywhere.yml  requirements.txt  sqlite3
.github/wokflows/: worflow-pr.yml
.github/workflows/: build.yml  heroku-deploy.yml  python-anywhere-deploy.yml  workflow-pr.yaml
bookstore/: .project  db.sqbpro  settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: __init__.py  product_serializers.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/tests/viewsets/: category_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py  product_viewsets.py
