[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "API de Livraria"
authors = ["Augusto Cedric <cedric.pmi.rmp@gmail.com>"]  # Adicione um espaço para melhor legibilidade
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = "^3.2.8"
psycopg2 = "^2.9"
psycopg2-binary = "^2.9"
django-rest-framework = "^0.1.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
autopep8 = "^1.6.0"
isort = "^5.10.1"
gunicorn = "22.0.0"
whitenoise = "^6.7.0"
gitpython = "3.1.41"
flake8 = "<5.0"
importlib-metadata = "<5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
factory_boy = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
