[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Augusto Cedric <cedric.pmi.rmp@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.7,<4"
Django = "^3.2.8"
django-rest-framework = "^0.1.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
gitpython = "^3.1.37"
typing-extensions = ">=3.7.4.3,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
